deploy/networkpolicy.yaml
# Generated from chart by make manifests. DO NOT EDIT.
---
# Source: mobilint-device-plugin/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mobilint-device-plugin-metrics
  namespace: kube-system
  labels:
    helm.sh/chart: mobilint-device-plugin-0.2.0
    app.kubernetes.io/name: mobilint-device-plugin
    app.kubernetes.io/instance: mobilint-device-plugin
    app.kubernetes.io/version: "v0.2.0"
    app.kubernetes.io/component: device-plugin
    app.kubernetes.io/part-of: mobilint-platform
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mobilint-device-plugin
      app.kubernetes.io/instance: mobilint-device-plugin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9400
          protocol: TCP
